# CUDA-Acceleration-of-Linear-Algebra-Kernels

./: CHEATSHEET.md  CMakeLists.txt  CUDA-Acceleration-of-Linear-Algebra-Kernels.code-workspace  README.md  results.csv  slurm-862101.out  slurm-862103.out  slurm-862127.out  slurm-862135.out
include/: benchmarks.hpp  check_cuda.hpp  cli.hpp  cpu_reference.hpp  kernels.hpp  mpi_distribution.hpp  mpi_utils.hpp  timer.hpp
scripts/: ncc_run.slurm  ncc_run_A1.slurm  ncc_run_A2.slurm  ncc_run_B1.slurm  ncc_run_B2_profiled.slurm  ncc_run_C1.slurm  ncc_run_tests.slurm  ncc_scaling.slurm
src/: benchmarks.cpp  cpu_reference.cpp  cuda_kernels.cu  main.cpp  mpi_distribution.cpp
tests/: test_main.cpp
